--- a/index.htm
+++ b/index.htm
@@ -5,12 +5,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;600;700&family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
+  <title>PROJETO RAGNAROK</title>
 </head>
 
 <body>
-  <h1>testeee aqui novinhas</h1>
+  <div class="container-geral">
+    <header class="header">
+      <div class="logo"><img src="./img/logo.png" alt="logo"></div>
+      <img class="img-header" src="./img/character-header_doram.png" alt="img header">
+      <ul class="nav-header">
+        <li> <a href="#">MIGRE SUA CONTA</a></li>
+        <li> <a href="#">DOWNLOAD</a></li>
+        <li> <a href="#">COMPRE NO HYPE</a></li>
+      </ul>
+
+
+
+
+
+    </header>
+
+
+
+
+    <div class="footer"></div>
+
+
+
+    <div class="main"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+  </div>
 
 </body>
 
