bug na img do header

--- a/index.htm
+++ b/index.htm
@@ -15,13 +15,18 @@
 <body>
   <div class="container-geral">
     <header class="header">
-      <div class="logo"><img src="./img/logo.png" alt="logo"></div>
-      <img class="img-header" src="./img/character-header_doram.png" alt="img header">
-      <ul class="nav-header">
-        <li> <a href="#">MIGRE SUA CONTA</a></li>
-        <li> <a href="#">DOWNLOAD</a></li>
-        <li> <a href="#">COMPRE NO HYPE</a></li>
-      </ul>
+      <div class="container-itens">
+        <div class="img-header">
+          <img src="./img/character-header_doram.png" alt="img header">
+        </div>
+        <!-- <div class="logo"><img src="./img/logo.png" alt="logo"></div> -->
+        <!-- <a href="#"> <img src="./img/logo.png" alt="logo"></a> -->
+        <ul class="nav-header">
+          <li> <a href="#">MIGRE SUA CONTA</a></li>
+          <li> <a href="#">DOWNLOAD</a></li>
+          <li> <a href="#">COMPRE NO HYPE</a></li>
+        </ul>
+      </div>
 
 
 
