--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,8 @@
           <li> <a href="#">MIGRE SUA CONTA</a></li>
           <li> <a href="#">DOWNLOAD</a></li>
           <li> <a href="#">COMPRE NO HYPE</a></li>
+          <li> <a href="#">COMPRE NO HYPE</a></li>
+
         </ul>
       </div>
 
