--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;600;700&family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <title>PROJETO RAGNAROK</title>
+  <title>PROJETO RAGNAROK COMPLETO</title>
 </head>
 
 <body>
@@ -26,7 +26,8 @@
           <li> <a href="#">DOWNLOAD</a></li>
           <li> <a href="#">COMPRE NO HYPE</a></li>
           <li> <a href="#">COMPRE NO HYPE</a></li>
-
+          <li> <a href="#">COMPRE NO HYPE</a></li>
+          <li> <a href="#">COMPRE NO HYPE</a></li>
         </ul>
       </div>
 
