--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
 
 
 
-    <div class="footer"></div>
+    <div class="footer-1"></div>
 
 
 
@@ -56,7 +56,7 @@
 
   </div>
   <div>
-    <footer>
+    <footer class="footer">
       <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
     </footer>
   </div>
