--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,9 @@
 
 
 
-    <div class="footer"></div>
+    <div class="footer">
+      <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
+    </div>
 
 
 
@@ -55,12 +57,6 @@
 
 
   </div>
-  <div>
-    <footer>
-      <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
-    </footer>
-  </div>
-
 </body>
 
 </html>
