--- a/index.htm
+++ b/index.htm
@@ -37,16 +37,14 @@
 
 
 
-    <<<<<<< HEAD <div class="footer">
+    <div class="footer">
       <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
-  </div>
-  =======
-  <div class="footer-1"></div>
-  >>>>>>> 02975c86cc8baddcf97e878a4ba3e89aca352db3
+    </div>
+    <div class="footer-1"></div>
 
 
 
-  <div class="main"></div>
+    <div class="main"></div>
 
 
 
