--- a/index.htm
+++ b/index.htm
@@ -37,9 +37,7 @@
 
 
 
-    <div class="footer">
-      <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
-    </div>
+
     <div class="footer-1"></div>
 
 
@@ -53,7 +51,9 @@
 
 
 
-
+    <footer class="footer">
+      <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
+    </footer>
 
 
 
