--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,9 @@
 
 
     <footer class="footer">
-      <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
+      <div class="container-footer">
+        <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
+      </div>
     </footer>
 
 
