--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,8 @@
 
 
     <footer class="footer">
-      <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
+      <p> ACOMPANHE-NOS NAS REDES SOCIAIS </p>
+
     </footer>
 
 
