--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,7 @@
 
 
     <footer class="footer">
-      <p> ACOMPANHE-NOS NAS REDES SOCIAIS </p>
+      <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
 
     </footer>
 
