--- a/index.htm
+++ b/index.htm
@@ -52,11 +52,12 @@
 
 
     <footer class="footer">
-      <div class="container-footer">
-        <h2> ACOMPANHE-NOS NAS REDES SOCIAIS </h2>
-      </div>
+      <p>ACOMPANHE-NOS NAS REDES SOCIAIS</p>
+      <div class="item"><img src="img/sprite.png" alt="icons-socias"></div>
 
-    </footer>
+  </div>
+
+  </footer>
 
 
 
