--- a/index.htm
+++ b/index.htm
@@ -16,9 +16,12 @@
   <div class="container-geral">
     <header class="header">
       <div class="container-itens">
-        <div class="img-header">
+        <img class="banner" src="./img/banner-header_doram.jpg" alt="">
+        <!-- <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
-        </div>
+        </div> -->
+        <a href="#" target="_blank"> <img class="img-header" src="./img/character-header_doram.png" alt="img header" title="ragnarok online"> </a>
+
         <!-- <div class="logo"><img src="./img/logo.png" alt="logo"></div> -->
         <!-- <a href="#"> <img src="./img/logo.png" alt="logo"></a> -->
         <ul class="nav-header">
