--- a/index.htm
+++ b/index.htm
@@ -53,13 +53,16 @@
 
     <footer class="footer">
       <p>ACOMPANHE-NOS NAS REDES SOCIAIS</p>
-      <div class="item"><img src="img/sprite.png" alt="icons-socias"></div>
+      <div class="item"><img src="img/sprite.png" alt="icons-socias">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <div class="item">5</div>
+      <div class="item">6</div>
+
 
   </div>
 
   </footer>
-
-
 
   </div>
 </body>
