--- a/index.htm
+++ b/index.htm
@@ -56,11 +56,85 @@
 
     <footer class="footer">
       <p>ACOMPANHE-NOS NAS REDES SOCIAIS</p>
-      <div class="item"><img src="img/sprite.png" alt="icons-socias">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-      <div class="item">5</div>
-      <div class="item">6</div>
+      <div class="img"><img src="img/sprite.png" alt="icons-socias">2</div>
+      <footer class="container-footer">
+        <section class="lista1">
+          <ol>
+            <li>NOVIDADES</li>
+            <li>NOVIDADES</li>
+            <li>COMUNICADOS</li>
+            <li>PROMOÇÕES</li>
+            <li>EVENTOS</li>
+          </ol>
+        </section>
+        <section class="lista2">
+          <ol>
+            <li>CLASSES</li>
+            <li>O ETERNO APRENDIZADO</li>
+            <li>A JUSTIÇA EM AÇÃO</li>
+            <li>O PODER DIVINO</li>
+            <li>O TIRO CERTEIRO DA NATUREZA</li>
+            <li>O PODER DOS ELEMENTOS</li>
+            <li>A ARTE DA ALQUIMIA E DA FORJA</li>
+            <li>A LUZ DAS TREVAS</li>
+            <li>O PODER INTERIOR</li>
+            <li>O SEGREDO DAS SOMBRAS</li>
+            <li>RÁPIDOS NO GATILHO</li>
+          </ol>
+        </section>
+        <section class="lista3">
+          <ol>
+            <li>GUIAS</li>
+            <li>COMO APROVEITAR MELHOR SUAS MEDICINAS</li>
+            <li>EM BUSCA DAS BOTAS TEMPORAIS PERFEITAS</li>
+            <li>QUEM SÃO OS GMS E COMO IDENTIFICÁ-LOS?</li>
+            <li>O QUE É RAGNARÖK ONLINE?</li>
+            <li>VEJA MAIS GUIAS</li>
+
+          </ol>
+        </section>
+        <section class="lista4">
+          <ol>
+            <li>EPISÓDIOS</li>
+            <li>INSURREIÇÃO</li>
+            <li>TORRE DO RELÓGIO DISTORCIDA</li>
+            <li>FANTASMAGORICA</li>
+            <li>A MALDIÇÃO DE GLAST HEIM</li>
+            <li>A BATALHA FINAL</li>
+            <li>VEJA MAIS EPISÓDIOS</li>
+          </ol>
+        </section>
+        <section class="lista5">
+          <ol>
+            <li>GUERRA DO EMPERIUM</li>
+            <li>REGRAS BÁSICAS</li>
+            <li>HORÁRIO DAS GUERRAS</li>
+            <li>SENHORES DO CASTELO</li>
+          </ol>
+        </section>
+        <section class="lista6">
+          <ol>
+            <li>COMPRE ROPS</li>
+          </ol>
+        </section>
+        <section class="lista7">
+          <ol>
+            <li>SUPORTE
+            </li>
+            <li>SERVIDORES </li>
+            <li>REQUISITOS DO SISTEMA</li>
+            <li>REGRAS DE CONDUTA</li>
+            <li>TABELA DE PUNIÇÕES</li>
+            <li>LISTA DE PUNIDOS</li>
+            <li>CONTRATO</li>
+            <li>POLÍTICA DE PRIVACIDADE</li>
+            <li>CENTRAL DE SUPORTE</li>
+
+
+          </ol>
+        </section>
+      </footer>
+
 
     </footer>
 
