--- a/index.htm
+++ b/index.htm
@@ -117,9 +117,10 @@
         </section>
         <section class="lista7">
           <ol>
-            <li>SUPORTE
+            <li>
+              <a href="#"> SUPORTE</a>
             </li>
-            <li>SERVIDORES </li>
+            <li>SERVIDORES</li>
             <li>REQUISITOS DO SISTEMA</li>
             <li>REGRAS DE CONDUTA</li>
             <li>TABELA DE PUNIÇÕES</li>
