--- a/index.htm
+++ b/index.htm
@@ -105,7 +105,7 @@
         <section class="lista5">
           <ol>
             <li>GUERRA DO EMPERIUM</li>
-            <li>REGRAS BÁSICAS</li>
+            <li>REGRAS BASICAS</li>
             <li>HORÁRIO DAS GUERRAS</li>
             <li>SENHORES DO CASTELO</li>
           </ol>
