lista nova test

--- a/index.htm
+++ b/index.htm
@@ -129,6 +129,13 @@
             <li>POLÍTICA DE PRIVACIDADE</li>
             <li>CENTRAL DE SUPORTE</li>
           </ol>
+
+          <ul>
+            <li>teste aqui</li>
+            <li>teste aqui</li>
+            <li>teste aqui</li>
+            <li>teste aqui</li>
+          </ul>
         </section>
       </footer>
 
