margin no footer

--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
       <div class="img"><img src="img/sprite.png" alt="icons-socias">2</div>
       <footer class="container-footer">
         <section class="lista1">
-          <ol>
+          <ol class="nav">
             <li>NOVIDADES</li>
             <li>NOVIDADES</li>
             <li>COMUNICADOS</li>
@@ -66,7 +66,7 @@
           </ol>
         </section>
         <section class="lista2">
-          <ol>
+          <ol class="nav">
             <li>CLASSES</li>
             <li>O ETERNO APRENDIZADO</li>
             <li>A JUSTIÇA EM AÇÃO</li>
@@ -81,7 +81,7 @@
           </ol>
         </section>
         <section class="lista3">
-          <ol>
+          <ol class="nav">
             <li>GUIAS</li>
             <li>COMO APROVEITAR MELHOR SUAS MEDICINAS</li>
             <li>EM BUSCA DAS BOTAS TEMPORAIS PERFEITAS</li>
@@ -92,7 +92,7 @@
           </ol>
         </section>
         <section class="lista4">
-          <ol>
+          <ol class="nav">
             <li>EPISÓDIOS</li>
             <li>INSURREIÇÃO</li>
             <li>TORRE DO RELÓGIO DISTORCIDA</li>
@@ -103,7 +103,7 @@
           </ol>
         </section>
         <section class="lista5">
-          <ol>
+          <ol class="nav">
             <li>GUERRA DO EMPERIUM</li>
             <li>REGRAS BASICAS</li>
             <li>HORÁRIO DAS GUERRAS</li>
@@ -111,12 +111,12 @@
           </ol>
         </section>
         <section class="lista6">
-          <ol>
+          <ol class="nav">
             <li>COMPRE ROPS</li>
           </ol>
         </section>
         <section class="lista7">
-          <ol>
+          <ol class="nav">
             <li>
               <a href="#">SUPORTE</a>
             </li>
@@ -130,12 +130,6 @@
             <li>CENTRAL DE SUPORTE</li>
           </ol>
 
-          <ul>
-            <li>teste aqui</li>
-            <li>teste aqui</li>
-            <li>teste aqui</li>
-            <li>teste aqui</li>
-          </ul>
         </section>
       </footer>
 
