link footer icons socias

--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,20 @@
 
     <footer class="footer">
       <p>ACOMPANHE-NOS NAS REDES SOCIAIS</p>
-      <div class="img"><img src="img/sprite.png" alt="icons-socias">2</div>
+      <div class="container-img">
+        <div class="img"><a href="#"><img src="img/icon footer/face.png" alt="facebook"></a></div>
+
+        <div class="img"><a href="#"><img src="img/icon footer/youtub.png" alt="youtube"></a></div>
+
+        <div class="img"><a href="#"><img src="img/icon footer/insta.png" alt="instagram"></a></div>
+
+        <div class="img"><a href="#"><img src="img/icon footer/twuit.png" alt="twitch"></a></div>
+
+        <div class="img"><a href="#"><img src="img/icon footer/twitter.png" alt="twitter"></a></div>
+
+        <div class="img"><a href="#"><img src="img/icon footer/discord.png" alt="discord"></a></div>
+
+      </div>
       <footer class="container-footer">
         <section class="lista1">
           <ol class="nav">
