links nas ol footer

--- a/index.htm
+++ b/index.htm
@@ -71,61 +71,61 @@
       <footer class="container-footer">
         <section class="lista1">
           <ol class="nav">
-            <li>NOVIDADES</li>
-            <li>NOVIDADES</li>
-            <li>COMUNICADOS</li>
-            <li>PROMOÇÕES</li>
-            <li>EVENTOS</li>
+            <li> <a href="#"> NOVIDADES </a></li>
+            <li><a href="#">NOVIDADES</a></li>
+            <li><a href="#">COMUNICADOS</a></li>
+            <li><a href="#">PROMOÇÕES</a></li>
+            <li><a href="#">EVENTOS</a></li>
           </ol>
         </section>
         <section class="lista2">
           <ol class="nav">
-            <li>CLASSES</li>
-            <li>O ETERNO APRENDIZADO</li>
-            <li>A JUSTIÇA EM AÇÃO</li>
-            <li>O PODER DIVINO</li>
-            <li>O TIRO CERTEIRO DA NATUREZA</li>
-            <li>O PODER DOS ELEMENTOS</li>
-            <li>A ARTE DA ALQUIMIA E DA FORJA</li>
-            <li>A LUZ DAS TREVAS</li>
-            <li>O PODER INTERIOR</li>
-            <li>O SEGREDO DAS SOMBRAS</li>
-            <li>RÁPIDOS NO GATILHO</li>
+            <li><a href="#">CLASSES</a></li>
+            <li><a href="#">O ETERNO APRENDIZADO</a></li>
+            <li><a href="#">A JUSTIÇA EM AÇÃO</a></li>
+            <li><a href="#">O PODER DIVINO</a></li>
+            <li><a href="#">O TIRO CERTEIRO DA NATUREZA</a></li>
+            <li><a href="#">O PODER DOS ELEMENTOS</a></li>
+            <li><a href="#">A ARTE DA ALQUIMIA E DA FORJA</a></li>
+            <li><a href="#">A LUZ DAS TREVAS</a></li>
+            <li><a href="#">O PODER INTERIOR</a></li>
+            <li><a href="#">O SEGREDO DAS SOMBRAS</a></li>
+            <li><a href="#">RÁPIDOS NO GATILHO</a></li>
           </ol>
         </section>
         <section class="lista3">
           <ol class="nav">
-            <li>GUIAS</li>
-            <li>COMO APROVEITAR MELHOR SUAS MEDICINAS</li>
-            <li>EM BUSCA DAS BOTAS TEMPORAIS PERFEITAS</li>
-            <li>QUEM SÃO OS GMS E COMO IDENTIFICÁ-LOS?</li>
-            <li>O QUE É RAGNARÖK ONLINE?</li>
-            <li>VEJA MAIS GUIAS</li>
+            <li><a href="#">GUIAS</a></li>
+            <li><a href="#">COMO APROVEITAR MELHOR SUAS MEDICINAS</a></li>
+            <li><a href="#">EM BUSCA DAS BOTAS TEMPORAIS PERFEITAS</a></li>
+            <li><a href="#">QUEM SÃO OS GMS E COMO IDENTIFICÁ-LOS?</a></li>
+            <li><a href="#">O QUE É RAGNARÖK ONLINE?</a></li>
+            <li><a href="#">VEJA MAIS GUIAS</a></li>
 
           </ol>
         </section>
         <section class="lista4">
           <ol class="nav">
-            <li>EPISÓDIOS</li>
-            <li>INSURREIÇÃO</li>
-            <li>TORRE DO RELÓGIO DISTORCIDA</li>
-            <li>FANTASMAGORICA</li>
-            <li>A MALDIÇÃO DE GLAST HEIM</li>
-            <li>A BATALHA FINAL</li>
-            <li>VEJA MAIS EPISÓDIOS</li>
+            <li><a href="#">EPISÓDIOS</a></li>
+            <li><a href="#">INSURREIÇÃO</a></li>
+            <li><a href="#">TORRE DO RELÓGIO DISTORCIDA</a></li>
+            <li><a href="#">FANTASMAGORICA</a></li>
+            <li><a href="#">A MALDIÇÃO DE GLAST HEIM</a></li>
+            <li><a href="#">A BATALHA FINAL</a></li>
+            <li><a href="#">VEJA MAIS EPISÓDIOS</a></li>
           </ol>
         </section>
         <section class="lista5">
           <ol class="nav">
-            <li>GUERRA DO EMPERIUM</li>
-            <li>REGRAS BASICAS</li>
-            <li>HORÁRIO DAS GUERRAS</li>
-            <li>SENHORES DO CASTELO</li>
+            <li><a href="#">GUERRA DO EMPERIUM</a></li>
+            <li><a href="#">REGRAS BASICAS</a></li>
+            <li><a href="#">HORÁRIO DAS GUERRAS</a></li>
+            <li><a href="#">SENHORES DO CASTELO</a></li>
           </ol>
         </section>
         <section class="lista6">
           <ol class="nav">
-            <li>COMPRE ROPS</li>
+            <li><a href="#">COMPRE ROPS</a></li>
           </ol>
         </section>
         <section class="lista7">
@@ -133,14 +133,14 @@
             <li>
               <a href="#">SUPORTE</a>
             </li>
-            <li>SERVIDORES</li>
-            <li>REQUISITOS DO SISTEMA</li>
-            <li>REGRAS DE CONDUTA</li>
-            <li>TABELA DE PUNIÇÕES</li>
-            <li>LISTA DE PUNIDOS</li>
-            <li>CONTRATO</li>
-            <li>POLÍTICA DE PRIVACIDADE</li>
-            <li>CENTRAL DE SUPORTE</li>
+            <li><a href="#">SERVIDORES</a></li>
+            <li><a href="#">REQUISITOS DO SISTEMA</a></li>
+            <li><a href="#">REGRAS DE CONDUTA</a></li>
+            <li><a href="#">TABELA DE PUNIÇÕES</a></li>
+            <li><a href="#">LISTA DE PUNIDOS</a></li>
+            <li><a href="#">CONTRATO</a></li>
+            <li><a href="#">POLÍTICA DE PRIVACIDADE</a></li>
+            <li><a href="#">CENTRAL DE SUPORTE</a></li>
           </ol>
 
         </section>
