--- a/index.htm
+++ b/index.htm
@@ -146,6 +146,32 @@
         </section>
       </footer>
 
+      <div class="divp">
+        <P>Os horários dos eventos do jogo, site e suas informações seguem o Horário Oficial de Brasília (GMT -3). Datas e promoções anunciadas podem sofrer alterações sem prévio aviso.</P>
+        <P>Atenção: os tesouros dos castelos desaparecem com a Manutenção Semanal (que ocorre às terças-feiras, das 04h30 às 11h00). Certifique-se sempre de recolher os tesouros de terça-feira entre a 00h01 e o horário da manutenção.</P>
+        <P>Eventualmente poderão acontecer manutenções extraordinárias.</P>
+        <P> <a href="#">
+            Política de privacidade
+          </a></P>
+        <p><a href="#">
+            Contrato de Licença de uso do Software Ragnarök
+          </a></p>
+      </div>
+      <div class="divimg">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+      <div class="imgdireita">
+        <img src="" alt="">
+      </div>
+      <div class="direitos">
+        <p></p>
+      </div>
+
+
+
+
 
     </footer>
 
