classificação indicativa completo

--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,23 @@
         <p></p>
       </div>
 
+      <!-- classificação etária inicio -->
+      <div class="classificacao-etaria">
+        <span>CLASSIFICAÇÃO INDICATIVA:LIVRE</span>
+        <div class="classificacao">
+          <div class="age-green">L</div>
+          <div class="text">
+            <p>
+              Violência
+              <br>
+            </p>
+          </div>
 
+        </div>
+        <span>Compras on-line</span>
+
+      </div>
+      <!-- classificação etária fim -->
 
 
 
