DESCRIÇÃO NA IMG DE RESET PADRÃO DO CSS

--- a/index.htm
+++ b/index.htm
@@ -16,19 +16,23 @@
   <div class="container-geral">
     <header class="header">
       <div class="container-itens">
+
         <img class="banner" src="./img/banner-header_doram.jpg" alt="">
         <!-- <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
         </div> -->
-        <a href="#" target="_blank"> <img class="img-header" src="./img/character-header_doram.png" alt="img header" title="ragnarok online"> </a>
+
+        <!-- <a href="#" target="_blank"> <img class="img-header" src="./img/character-header_doram.png" alt="img header" title="ragnarok online"> </a> -->
 
         <!-- <div class="logo"><img src="./img/logo.png" alt="logo"></div> -->
         <!-- <a href="#"> <img src="./img/logo.png" alt="logo"></a> -->
-        <ul class="nav-header">
+
+
+        <!-- <ul class="nav-header">
           <li> <a href="#">MIGRE SUA CONTA</a></li>
           <li> <a href="#">DOWNLOAD</a></li>
           <li> <a href="#">COMPRE NO HYPE</a></li>
-        </ul>
+        </ul> -->
       </div>
 
 
