adicionado a img no banner e a nav

--- a/index.htm
+++ b/index.htm
@@ -18,9 +18,9 @@
       <div class="container-itens">
 
         <img class="banner" src="./img/banner-header_doram.jpg" alt="">
-        <!-- <div class="img-header">
+        <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
-        </div> -->
+        </div>
 
         <!-- <a href="#" target="_blank"> <img class="img-header" src="./img/character-header_doram.png" alt="img header" title="ragnarok online"> </a> -->
 
@@ -28,11 +28,11 @@
         <!-- <a href="#"> <img src="./img/logo.png" alt="logo"></a> -->
 
 
-        <!-- <ul class="nav-header">
+        <ul class="nav-header">
           <li> <a href="#">MIGRE SUA CONTA</a></li>
           <li> <a href="#">DOWNLOAD</a></li>
           <li> <a href="#">COMPRE NO HYPE</a></li>
-        </ul> -->
+        </ul>
       </div>
 
 
