--- a/index.htm
+++ b/index.htm
@@ -27,12 +27,13 @@
         <!-- <div class="logo"><img src="./img/logo.png" alt="logo"></div> -->
         <!-- <a href="#"> <img src="./img/logo.png" alt="logo"></a> -->
 
-
-        <ul class="nav-header">
-          <li> <a href="#">MIGRE SUA CONTA</a></li>
-          <li> <a href="#">DOWNLOAD</a></li>
-          <li> <a href="#">COMPRE NO HYPE</a></li>
-        </ul>
+        <div class="lista-menu">
+          <ul class="nav-header">
+            <li> <a href="#">MIGRE SUA CONTA</a></li>
+            <li> <a href="#">DOWNLOAD</a></li>
+            <li> <a href="#">COMPRE NO HYPE</a></li>
+          </ul>
+        </div>
       </div>
 
 
