MUDAR COR DO BOTÃO 'DOWNLAOD' DIRETO NO HTML

--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
         <div class="lista-menu">
           <ul class="nav-header">
             <li> <a href="#">MIGRE SUA CONTA</a></li>
-            <li> <a href="#">DOWNLOAD</a></li>
+            <li> <a style="background: #a4ebd7;" href="#">DOWNLOAD</a></li>
             <li> <a href="#">COMPRE NO HYPE</a></li>
           </ul>
         </div>
