--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
           <ul class="nav-header">
             <li> <a href="#">MIGRE SUA CONTA</a></li>
             <li class="download"> <a href="#">DOWNLOAD</a></li>
-            <li> <a href="#">COMPRE NO HYPE</a></li>
+            <li class="compre"> <a href="#">COMPRE NO HYPE</a></li>
           </ul>
         </div>
       </div>
