--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
         <div class="lista-menu">
           <ul class="nav-header">
             <li> <a href="#">MIGRE SUA CONTA</a></li>
-            <li class="download"> <a href="#">DOWNLOAD</a></li>
+            <li class="download"> <a href="#"> <span>DOWNLOAD</span> </a></li>
             <li class="compre"> <a href="#">COMPRE NO HYPE</a></li>
           </ul>
         </div>
