migre sua conta com nova classe concluido

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 
         <div class="lista-menu">
           <ul class="nav-header">
-            <li> <a href="#">MIGRE SUA CONTA</a></li>
+            <li class="migre-conta"> <a href="#">MIGRE SUA CONTA</a></li>
             <li class="download"> <a href="#"> <span>DOWNLOAD</span> </a></li>
             <li class="compre"> <a href="#"> <span>COMPRE NO HYPE</span></a></li>
           </ul>
