detalhe no after do .migre sua conta

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,8 @@
 
         <div class="lista-menu">
           <ul class="nav-header">
-            <li class="migre-conta"> <a href="#"> <span> MIGRE SUA CONTA</span></a></li>
+            <li class="migre-conta"> <a href="#"> <span> MIGRE SUA CONTA
+                </span></a></li>
             <li class="download"> <a href="#"> <span>DOWNLOAD</span> </a></li>
             <li class="compre"> <a href="#"> <span>COMPRE NO HYPE</span></a></li>
           </ul>
