add o logo do ragnarok e posicionado confome o banner

--- a/index.htm
+++ b/index.htm
@@ -15,14 +15,21 @@
 <body>
   <div class="container-geral">
     <header class="header">
+
       <div class="container-itens">
 
         <img class="banner" src="./img/banner-header_doram.jpg" alt="">
+        <div class="marca-rag">
+          <img src="./img/logo.png" alt="">
+        </div>
         <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
         </div>
 
-        <!-- <a href="#" target="_blank"> <img class="img-header" src="./img/character-header_doram.png" alt="img header" title="ragnarok online"> </a> -->
+
+
+
+
 
         <!-- <div class="logo"><img src="./img/logo.png" alt="logo"></div> -->
         <!-- <a href="#"> <img src="./img/logo.png" alt="logo"></a> -->
@@ -35,6 +42,7 @@
             <li class="compre"> <a href="#"> <span>COMPRE NO HYPE</span></a></li>
           </ul>
         </div>
+
       </div>
 
 
