img do logo passado p um link

--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
 
         <img class="banner" src="./img/banner-header_doram.jpg" alt="">
         <div class="marca-rag">
-          <img src="./img/logo.png" alt="">
+          <a href="#"><img src="./img/logo.png" alt=""></a>
         </div>
         <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
