--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,10 @@
 
         <img class="banner" src="./img/banner-header_doram.jpg" alt="">
         <div class="marca-rag">
-          <a href="#"><img src="./img/logo.png" alt=""></a>
+          <a href="#"><img src="./img/logo.png" alt="">
+            <span>Desde 2004 trazendo</span>
+          </a>
+
         </div>
         <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
