--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
           <a href="#"> <img src="./img/logo.png" alt="">
           </a>
 
-          <!-- <span>Desde 2004 trazendo</span> -->
+          <span>Desde 2004 trazendo</span>
         </div>
         <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
