nav-menu comentando p concluir o span

--- a/index.htm
+++ b/index.htm
@@ -19,11 +19,14 @@
       <div class="container-itens">
 
         <img class="banner" src="./img/banner-header_doram.jpg" alt="">
+
+
         <div class="marca-rag">
           <a href="#"> <img src="./img/logo.png" alt="">
+            <span>Desde 2004 trazendo</span>
           </a>
 
-          <span>Desde 2004 trazendo</span>
+
         </div>
         <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
@@ -34,17 +37,16 @@
 
 
 
-        <!-- <div class="logo"><img src="./img/logo.png" alt="logo"></div> -->
-        <!-- <a href="#"> <img src="./img/logo.png" alt="logo"></a> -->
 
-        <div class="lista-menu">
+
+        <!-- <div class="lista-menu">
           <ul class="nav-header">
             <li class="migre-conta"> <a href="#"> <span class="migre-conta-span"> MIGRE SUA CONTA
                 </span></a></li>
             <li class="download"> <a href="#"> <span>DOWNLOAD</span> </a></li>
             <li class="compre"> <a href="#"> <span>COMPRE NO HYPE</span></a></li>
           </ul>
-        </div>
+        </div> -->
 
       </div>
 
