corrigido o bug da imagem header

--- a/index.htm
+++ b/index.htm
@@ -21,16 +21,20 @@
         <img class="banner" src="./img/banner-header_doram.jpg" alt="">
 
 
+        <div class="img-header">
+          <img src="./img/character-header_doram.png" alt="img header">
+        </div>
+
         <div class="marca-rag">
           <a href="#"> <img src="./img/logo.png" alt="">
-            <span>Desde 2004 trazendo</span>
+            <span> <strong> Desde 2004 trazendo</strong> <span>aventuras pra você!</span></span>
           </a>
 
 
         </div>
-        <div class="img-header">
+        <!-- <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
-        </div>
+        </div> -->
 
 
 
