comentado todo nav heade do html

--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,8 @@
 
 
         </div>
+
+
         <!-- <div class="img-header">
           <img src="./img/character-header_doram.png" alt="img header">
         </div> -->
@@ -42,7 +44,7 @@
 
 
 
-
+        <!-- descomentar aqui depois -->
         <!-- <div class="lista-menu">
           <ul class="nav-header">
             <li class="migre-conta"> <a href="#"> <span class="migre-conta-span"> MIGRE SUA CONTA
