--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,9 @@
 
         <div class="marca-rag">
           <a href="#"> <img src="./img/logo.png" alt="">
-            <span> <strong> Desde 2004 trazendo</strong> <span>aventuras pra você!</span></span>
+            <span> <strong> Desde 2004 trazendo</strong>
+              <h3 class="texto2">aventuras pra você!</h3>
+            </span>
           </a>
 
 
