--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;600;700&family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;500;600;700&family=Vollkorn:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>PROJETO RAGNAROK COMPLETO</title>
 </head>
