--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;500;600;700&family=Vollkorn:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>PROJETO RAGNAROK COMPLETO</title>
+  <h2>teste</h2>
 </head>
 
 <body>
