--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@
             <span> <strong> Desde 2004 trazendo</strong>
               <h2>teste</h2>
               <h3>teste3</h3>
+              <h4>teste</h4>
               <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
