--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         <div class="marca-rag">
           <a href="#"> <img src="./img/logo.png" alt="">
             <span> <strong> Desde 2004 trazendo</strong>
-
+              <h2>aqui é o texto teste</h2>
               <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
