--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
           <a href="#"> <img src="./img/logo.png" alt="">
             <span> <strong> Desde 2004 trazendo</strong>
               <h2>aqui é o texto teste</h2>
-              <h4>novo teste</h4>
+              <h4>novo teste</h4>d
               <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
