teste com o span

--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@
             <span> <strong> Desde 2004 trazendo</strong>
               <h2>aqui é o texto teste</h2>
               <h4>novo teste</h4>d
+              <span>teste do span lacunas</span>
               <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
