--- a/index.htm
+++ b/index.htm
@@ -31,6 +31,7 @@
               <h2>aqui é o texto teste</h2>
               <h4>novo teste</h4>d
               <span>teste do span lacunas</span>
+              <span>teste </span>
               <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
