--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,7 @@
               <h4>novo teste</h4>d
               <span>teste do span lacunas</span>
               <span>teste </span>
+              <h3>comprar aqui click</h3>
               <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
