--- a/index.htm
+++ b/index.htm
@@ -31,10 +31,10 @@
               <h2>aqui é o texto teste</h2>
               <h4>novo teste</h4>d
               <h5>teste</h5>
-
-              <h3>comprar aqui click</h3>
-              <span>volta dele</span>
-              <h3 class="texto2">aventuras pra você!</h3>
+              <h4>RAGNAROK</4>
+                <h3>comprar aqui click</h3>
+                <span>volta dele</span>
+                <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
 
