--- a/index.htm
+++ b/index.htm
@@ -31,6 +31,7 @@
               <h2>aqui é o texto teste</h2>
               <h4>novo teste</h4>d
               <h5>teste</h5>
+              <h6>teste aqui do h6</h6>
               <h4>RAGNAROK</4>
                 <h3>comprar aqui click</h3>
                 <span>volta dele</span>
