--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,7 @@
               <h4>RAGNAROK</4>
                 <h3>comprar aqui click</h3>
                 <span>volta dele</span>
+                <h2>teste</h2>
                 <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
