--- a/index.htm
+++ b/index.htm
@@ -35,6 +35,8 @@
                 <h2>teste</h2>
                 <h4>cadastre sua conta</h4>
                 <h4>ragnarok online aqui</h4>
+                <p>rops sortidos</p>
+                <h3>máquina de chapeus</h3>
                 <h3 class="texto2">aventuras pra você!</h3>
             </span>
           </a>
