--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
                 <h3>comprar aqui click</h3>
                 <span>volta dele</span>
                 <h2>teste</h2>
-
+                <p>produtos</p>
 
                 <h3 class="texto2">aventuras pra você!</h3>
             </span>
