--- a/index.htm
+++ b/index.htm
@@ -34,6 +34,7 @@
                 <span>volta dele</span>
                 <h2>teste</h2>
                 <p>produtos</p>
+                <h4>compre aqui</h4>
 
                 <h3 class="texto2">aventuras pra você!</h3>
             </span>
